feat: add task management enpoints, UI task management, drag and drop by dnd kit
